chore(all): 整理文件

--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
     "jest": "^23.0.0-alpha.0",
     "wx-to-tt": "^0.0.10"
   },
